@@ -1,5 +1,5 @@
 /*
- * "$Id: main.c,v 1.57.2.46 2003/05/09 15:11:57 mike Exp $"
+ * "$Id: main.c,v 1.57.2.47 2003/07/19 21:57:49 mike Exp $"
  *
  *   Scheduler main loop for the Common UNIX Printing System (CUPS).
  *
@@ -68,7 +68,7 @@ static void	usage(void);
  */
 
 static int	parent_signal = 0;	/* Set to signal number from child */
-static int	holdcount = 0;		/* Number of time "hold" was called */
+static int	holdcount = 0;		/* Number of times "hold" was called */
 #if defined(HAVE_SIGACTION) && !defined(HAVE_SIGSET)
 static sigset_t	holdmask;		/* Old POSIX signal mask */
 #endif /* HAVE_SIGACTION && !HAVE_SIGSET */
@@ -911,6 +911,12 @@ sigchld_handler(int sig)	/* I - Signal number */
   (void)sig;
 
  /*
+  * Bump the signal count...
+  */
+
+  SignalCount ++;
+
+ /*
   * Save the original error value (wait might overwrite it...)
   */
 
@@ -1009,6 +1015,12 @@ sigchld_handler(int sig)	/* I - Signal number */
 #elif !defined(HAVE_SIGACTION)
   signal(SIGCLD, sigchld_handler);
 #endif /* HAVE_SIGSET */
+
+ /*
+  * Restore the signal count...
+  */
+
+  SignalCount --;
 }
 
 
@@ -1044,6 +1056,12 @@ sigterm_handler(int sig)		/* I - Signal */
 
 
   (void)sig;	/* remove compiler warnings... */
+
+ /*
+  * Bump the signal count...
+  */
+
+  SignalCount ++;
 
  /*
   * Log an error...
@@ -1088,5 +1106,5 @@ usage(void)
 
 
 /*
- * End of "$Id: main.c,v 1.57.2.46 2003/05/09 15:11:57 mike Exp $".
+ * End of "$Id: main.c,v 1.57.2.47 2003/07/19 21:57:49 mike Exp $".
  */
